--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <artifactId>xercesImpl</artifactId>
             <version>2.12.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.31</version>
+        </dependency>
+
     </dependencies>
 
 </project>
