--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.31</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
+        </dependency>
     </dependencies>
+
 
 </project>
