--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>Group4</groupId>
-    <artifactId>ITproject3_v2</artifactId>
+    <artifactId>Semesterproject3</artifactId>
     <version>1</version>
     <packaging>war</packaging>
 
