--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <artifactId>jakarta.ws.rs-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
